refactor(api): move counter query to /api/query/counters
